@@ -7,63 +7,64 @@ data:extend({
     inventory_order = "f-m",
     order = "f-m",
   },
+  
   {
     type = "item-subgroup",
-    name = "a-growth-credits",
+    name = "a-science",
     group = "tiberium",
     order = "f-0",
   },
   {
     type = "item-subgroup",
-    name = "a-refining",
+    name = "a-slurry-science",
     group = "tiberium",
     order = "f-1",
   },
   {
     type = "item-subgroup",
-    name = "a-centrifuging",
+    name = "a-molten-science",
     group = "tiberium",
     order = "f-2",
   },
   {
     type = "item-subgroup",
-    name = "a-direct",
+    name = "a-liquid-science",
     group = "tiberium",
     order = "f-3",
   },
   {
     type = "item-subgroup",
-    name = "a-buildings",
+    name = "a-refining",
     group = "tiberium",
     order = "f-4",
   },
   {
     type = "item-subgroup",
-    name = "a-items",
+    name = "a-centrifuging",
     group = "tiberium",
     order = "f-5",
   },
   {
     type = "item-subgroup",
-    name = "a-science",
+    name = "a-direct",
     group = "tiberium",
     order = "f-6",
   },
   {
     type = "item-subgroup",
-    name = "a-slurry-science",
+    name = "a-growth-credits",
     group = "tiberium",
     order = "f-7",
   },
   {
     type = "item-subgroup",
-    name = "a-molten-science",
+    name = "a-buildings",
     group = "tiberium",
     order = "f-8",
   },
   {
     type = "item-subgroup",
-    name = "a-liquid-science",
+    name = "a-items",
     group = "tiberium",
     order = "f-9",
   },
